refactor: simplify code and eliminate duplication
- Fix UserDto.toEntity() to include manager field mapping
- Remove duplicate authority logic in JwtAuthenticationFilter
- Replace Collectors.toList() with modern toList() in TaskService/UserService
- Add missing BadRequestException import in UserService

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>